addons/prometheus-operator/monitoring-stack/prometheus/configs/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 9090
      protocol: TCP
    - port: 8080
      protocol: TCP
